<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.george.simongame.MainActivity">

    <TextView
        android:text="@string/SimonTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="48dp"
        android:id="@+id/titleString"
        android:textSize="48sp" />

    <TextView
        android:text="@string/MyName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/titleString"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="23dp"
        android:id="@+id/myName" />

    <Button
        android:text="@string/PlayString"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/myName"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="85dp"
        android:id="@+id/playButton"
        android:onClick="playButtonClick"/>
</RelativeLayout>
