<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_game_over"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.george.simongame.GameOver">

    <TextView
        android:text="@string/gameOverString"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="48dp"
        android:id="@+id/gameOverString"
        android:textSize="48sp"
        android:textColor="@android:color/black" />

    <TextView
        android:text="@string/scoreString"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/gameOverString"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="53dp"
        android:id="@+id/finalScoreString"
        android:textColor="@android:color/black" />

    <Button
        android:text="@string/playAgainString"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/finalScoreString"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="90dp"
        android:id="@+id/playAgainButton"
        android:onClick="playAgainButton"
        android:visibility="invisible" />
</RelativeLayout>
