<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_simon_game"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.george.simongame.SimonGame">

    <TextView
        android:text="@string/scoreString"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:id="@+id/scoreString" />

    <Button
        android:text="@string/quitString"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="21dp"
        android:id="@+id/Quitbutton"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:onClick="quitButton"/>

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/red_portion_unlit"
        android:id="@+id/redButton"
        android:layout_marginLeft="16dp"
        android:layout_marginStart="16dp"
        android:layout_alignTop="@+id/greenButton"
        android:layout_toRightOf="@+id/greenButton"
        android:layout_toEndOf="@+id/greenButton"
        android:scaleType="matrix" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/yellow_portion_unlit"
        android:layout_below="@+id/greenButton"
        android:layout_alignLeft="@+id/greenButton"
        android:layout_alignStart="@+id/greenButton"
        android:layout_marginTop="17dp"
        android:id="@+id/yellowButton"
        android:scaleType="matrix" />

    <ImageView
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/green_portion_unlit"
        android:id="@+id/greenButton"
        android:layout_marginTop="12dp"
        android:layout_marginLeft="33dp"
        android:layout_marginStart="33dp"
        android:layout_below="@+id/scoreString"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:adjustViewBounds="false"
        android:scaleType="matrix"
        android:layout_width="wrap_content"
        android:foregroundGravity="top" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/blue_portion_unlit"
        android:id="@+id/blueButton"
        android:layout_alignTop="@+id/yellowButton"
        android:layout_alignLeft="@+id/redButton"
        android:layout_alignStart="@+id/redButton"
        android:scaleType="matrix" />

    <TextView
        android:text="@string/SimonTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/simonString"
        android:typeface="normal"
        android:textSize="36sp"
        android:textColor="@android:color/black"
        android:layout_alignBottom="@+id/yellowButton"
        android:layout_alignRight="@+id/Quitbutton"
        android:layout_alignEnd="@+id/Quitbutton"
        android:layout_marginBottom="115dp" />

</RelativeLayout>
